fix some style issue

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="dashboard-container" *ngIf="envs">
   <div fxFlex="48">
       <div fxLayout="row">
-          <mat-card id="app-env-overview-card">
+          <mat-card id="app-env-overview-card" fxFlex="100">
             <mat-card-header id="app-env-overview-header">
               <mat-card-title class="header-text body-primary-heading">
                 Enviroments
@@ -14,7 +14,7 @@
         </div>
         <br>
         <div fxLayout="row">
-          <mat-card id="app-server-overview-card">
+          <mat-card id="app-server-overview-card" fxFlex="100">
             <mat-card-header id="app-server-overview-header">
               <mat-card-title class="header-text body-primary-heading">
                 Servers
@@ -27,7 +27,7 @@
         </div>
         <br>
         <div fxLayout="row">
-          <mat-card id="app-applications-overview-card">
+          <mat-card id="app-applications-overview-card" fxFlex="100">
             <mat-card-header id="app-applications-overview-header">
               <mat-card-title class="header-text body-primary-heading">
                 Applications
