--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,7 +31,7 @@ $error:#bd362f;
     color: white;
 }
 .mat-card{
-    width: 95% !important;
+  //  width: 95% !important;
 }
 
 .mat-chip.mat-standard-chip{
